add development dir exclusions

--- a/yabrc/mac/mac_development.properties
+++ b/yabrc/mac/mac_development.properties
@@ -1,3 +1,3 @@
 root=/users/hunter/Development
 baseName=mac_development
-ignoredDirs=.git
+ignoredDirs=.git, bin, build, target, htmlcov, apk_cache, __pycache__
