--- a/yabrc/blue/blue_development.properties
+++ b/yabrc/blue/blue_development.properties
@@ -1,3 +1,3 @@
 root=/Volumes/Blue/Development
 baseName=blue_development
-ignoredDirs=.git
+ignoredDirs=.git, bin, build, target, htmlcov, apk_cache, __pycache__
