--- a/yabrc/cuda/cuda_development.properties
+++ b/yabrc/cuda/cuda_development.properties
@@ -1,3 +1,3 @@
 root=/Volumes/Cuda/Development
 baseName=cuda_development
-ignoredDirs=.git
+ignoredDirs=.git, bin, build, target, htmlcov, apk_cache, __pycache__
