--- a/yabrc/nas/nas_development.properties
+++ b/yabrc/nas/nas_development.properties
@@ -1,3 +1,3 @@
 root=/Volumes/Hunter/Development
 baseName=nas_development
-ignoredDirs=.git
+ignoredDirs=.git, bin, build, target, htmlcov, apk_cache, __pycache__
