--- a/yabrc/ssd/ssd_development.properties
+++ b/yabrc/ssd/ssd_development.properties
@@ -1,3 +1,3 @@
 root=/Volumes/SSDBackup/Development
 baseName=ssd_development
-ignoredDirs=.git
+ignoredDirs=.git, bin, build, target, htmlcov, apk_cache, __pycache__
