--- a/yabrc/work/work_development.properties
+++ b/yabrc/work/work_development.properties
@@ -1,3 +1,3 @@
 root=/Volumes/WorkBackup/Development
 baseName=work_development
-ignoredDirs=.git
+ignoredDirs=.git, bin, build, target, htmlcov, apk_cache, __pycache__
